--- a/inner-page.html
+++ b/inner-page.html
@@ -5,16 +5,17 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Inner Page - Baker Bootstrap Template</title>
+  <title>BSS Group Company</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link href="assets/img/logoBSStransparant.png" rel="icon">
 
   <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i"
+    rel="stylesheet">
 
   <!-- Vendor CSS Files -->
   <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -26,12 +27,6 @@
   <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
 
-  <!-- =======================================================
-  * Template Name: Baker - v4.7.0
-  * Template URL: https://bootstrapmade.com/baker-free-onepage-bootstrap-theme/
-  * Author: BootstrapMade.com
-  * License: https://bootstrapmade.com/license/
-  ======================================================== -->
 </head>
 
 <body>
@@ -40,36 +35,39 @@
   <header id="header" class="fixed-top ">
     <div class="container d-flex align-items-center justify-content-between">
 
-      <h1 class="logo"><a href="index.html">Baker</a></h1>
+      <h1 class="logo"> <img src="assets/img/logoBSStransparant.png" alt="" width="50" height="50" class="me-3"><a
+          href="index.html"><span class="B-title">B</span><span class="S-title">S</span><span class="S2-title">S</span>
+          Group</a></h1>
       <!-- Uncomment below if you prefer to use an image logo -->
       <!-- <a href="index.html" class="logo"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
 
       <nav id="navbar" class="navbar">
         <ul>
-          <li><a class="nav-link scrollto " href="#hero">Home</a></li>
-          <li><a class="nav-link scrollto" href="#about">About</a></li>
-          <li><a class="nav-link scrollto" href="#services">Services</a></li>
-          <li><a class="nav-link scrollto " href="#portfolio">Portfolio</a></li>
-          <li><a class="nav-link scrollto" href="#team">Team</a></li>
-          <li><a class="nav-link scrollto" href="#pricing">Pricing</a></li>
-          <li class="dropdown"><a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down"></i></a>
+          <li><a class="nav-link scrollto" href="index.html">Beranda</a></li>
+          <li><a class="nav-link scrollto" href="index.html">Tentang Kami</a></li>
+          <li><a class="nav-link scrollto" href="index.html">Jasa</a></li>
+          <!-- <li><a class="nav-link scrollto " href="#portfolio">Portfolio</a></li> -->
+          <li><a class="nav-link scrollto" href="index.html">Pendiri</a></li>
+          <li><a class="nav-link scrollto" href="index.html">Pricing</a></li>
+          <li><a class="nav-link scrollto active" href="inner-page.html">Keanggotaan</a></li>
+          <li class="dropdown"><a href="#"><span>Berita dan Artikel</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
-              <li><a href="#">Drop Down 1</a></li>
-              <li class="dropdown"><a href="#"><span>Deep Drop Down</span> <i class="bi bi-chevron-right"></i></a>
-                <ul>
-                  <li><a href="#">Deep Drop Down 1</a></li>
-                  <li><a href="#">Deep Drop Down 2</a></li>
-                  <li><a href="#">Deep Drop Down 3</a></li>
-                  <li><a href="#">Deep Drop Down 4</a></li>
-                  <li><a href="#">Deep Drop Down 5</a></li>
-                </ul>
-              </li>
-              <li><a href="#">Drop Down 2</a></li>
-              <li><a href="#">Drop Down 3</a></li>
-              <li><a href="#">Drop Down 4</a></li>
-            </ul>
+              <!-- <li><a href="#">Berita dan Artikel</a></li>
+              <li class="dropdown"><a href="#"><span>Berita dan Artikel</span> <i class="bi bi-chevron-right"></i></a> -->
+              <!-- <ul>
+                  <li><a href="#">Kegiatan BSS</a></li>
+                  <li><a href="#">Artikel Umum</a></li>
+                  <li><a href="#">Profil Perusahaan</a></li>
+                  <li><a href="#">Liputan Media</a></li>
+                </ul> -->
           </li>
-          <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
+          <li><a href="#">Kegiatan BSS</a></li>
+          <li><a href="#">Artikel Umum</a></li>
+          <li><a href="#">Profil Perusahaan</a></li>
+          <li><a href="#">Liputan Media</a></li>
+        </ul>
+        </li>
+        <li><a class="nav-link scrollto" href="#contact">Kontak Kami</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
@@ -78,31 +76,231 @@
   </header><!-- End Header -->
 
   <main id="main">
+    <!-- Main -->
 
     <!-- ======= Breadcrumbs ======= -->
     <section class="breadcrumbs">
       <div class="container">
 
         <div class="d-flex justify-content-between align-items-center">
-          <h2>Inner Page</h2>
+          <h2>Daftar Keanggotaan BSS Group</h2>
           <ol>
             <li><a href="index.html">Home</a></li>
-            <li>Inner Page</li>
+            <li>Keanggotaan</li>
           </ol>
         </div>
-
       </div>
     </section><!-- End Breadcrumbs -->
+    <div class="container">
+      <div class="section-list-anggota">
+        <div class="row">
+          <div class="col-12 mt-3">
+            <!-- <h2 class="fw-bold">List Anggota</h2> -->
+          </div>
+        </div>
+        <hr>
+        <div class="row justify-content-center mt-3">
+          <div class="col-md-4 mb-3">
+            <div class="img-team overflow-hidden rounded-3">
+              <img src="assets/img/team/team-1.jpg" alt="" class="w-100 h-100">
+            </div>
+          </div>
+          <div class="col-md-7 offset-md-1">
+            <div class="member-info">
+              <div class="about-tim">
+                <h4>R. ABDUL JABAR AL-FARIZI</h4>
+                <hr>
+                <!-- <h4>DEWAN KOMISARIS</h4> -->
+                <p>Jabatan &emsp; &emsp; &emsp; &emsp; &emsp;:</p>
+                <p>Tempat Tgl Lahir&emsp;&emsp;:</p>
+                <p>Alamat &emsp;&emsp;&emsp;&emsp; &emsp;&emsp; :</p>
+                <p>Pengurus &emsp;&emsp; &emsp;&emsp;&emsp;:</p>
+              </div>
+            </div>
+          </div>
+          <hr>
 
-    <section class="inner-page">
-      <div class="container">
-        <p>
-          Example inner page template
-        </p>
+          <div class="col-md-4 mb-3">
+            <div class="img-team overflow-hidden rounded-3">
+              <img src="assets/img/team/team-3.jpg" alt="" class="w-100 h-100">
+            </div>
+          </div>
+          <div class="col-md-7 offset-md-1">
+            <div class="member-info">
+              <div class="about-tim">
+                <h4>AHMAD JAENAL ABIDIN</h4>
+                <hr>
+                <!-- <h4>DEWAN KOMISARIS</h4> -->
+                <p>Jabatan &emsp; &emsp; &emsp; &emsp; &emsp;:</p>
+                <p>Tempat Tgl Lahir&emsp;&emsp;:</p>
+                <p>Alamat &emsp;&emsp;&emsp;&emsp; &emsp;&emsp; :</p>
+                <p>Pengurus &emsp;&emsp; &emsp;&emsp;&emsp;:</p>
+              </div>
+            </div>
+          </div>
+          <hr>
+
+          <div class="col-md-4 mb-3">
+            <div class="img-team overflow-hidden rounded-3">
+              <img src="assets/img/team/team-1.jpg" alt="" class="w-100 h-100">
+            </div>
+          </div>
+          <div class="col-md-7 offset-md-1">
+            <div class="member-info">
+              <div class="about-tim">
+                <b>
+                  <h4>ADE YATIMIL QIROM</h4>
+                </b>
+                <hr>
+                <!-- <h4>DEWAN KOMISARIS</h4> -->
+                <p>Jabatan &emsp; &emsp; &emsp; &emsp; &emsp;:</p>
+                <p>Tempat Tgl Lahir&emsp;&emsp;:</p>
+                <p>Alamat &emsp;&emsp;&emsp;&emsp; &emsp;&emsp; :</p>
+                <p>Pengurus &emsp;&emsp; &emsp;&emsp;&emsp;:</p>
+              </div>
+            </div>
+          </div>
+          <hr>
+
+          <div class="col-md-4 mb-3">
+            <div class="img-team overflow-hidden rounded-3">
+              <img src="assets/img/team/team-2.jpg" alt="" class="w-100 h-100">
+            </div>
+          </div>
+          <div class="col-md-7 offset-md-1">
+            <div class="member-info">
+              <div class="about-tim">
+                <b>
+                  <h4>SITI NURFAZRIAH</h4>
+                </b>
+                <hr>
+                <!-- <h4>DEWAN KOMISARIS</h4> -->
+                <p>Jabatan &emsp; &emsp; &emsp; &emsp; &emsp;:</p>
+                <p>Tempat Tgl Lahir&emsp;&emsp;:</p>
+                <p>Alamat &emsp;&emsp;&emsp;&emsp; &emsp;&emsp; :</p>
+                <p>Pengurus &emsp;&emsp; &emsp;&emsp;&emsp;:</p>
+              </div>
+            </div>
+          </div>
+          <hr>
+
+          <div class="col-md-4 mb-3">
+            <div class="img-team overflow-hidden rounded-3">
+              <img src="assets/img/team/team-1.jpg" alt="" class="w-100 h-100">
+            </div>
+          </div>
+          <div class="col-md-7 offset-md-1">
+            <div class="member-info">
+              <div class="about-tim">
+                <b>
+                  <h4>SUEPOYO</h4>
+                </b>
+                <hr>
+                <!-- <h4>DEWAN KOMISARIS</h4> -->
+                <p>Jabatan &emsp; &emsp; &emsp; &emsp; &emsp;:</p>
+                <p>Tempat Tgl Lahir&emsp;&emsp;:</p>
+                <p>Alamat &emsp;&emsp;&emsp;&emsp; &emsp;&emsp; :</p>
+                <p>Pengurus &emsp;&emsp; &emsp;&emsp;&emsp;:</p>
+              </div>
+            </div>
+          </div>
+          <hr>
+
+          <div class="col-md-4 mb-3">
+            <div class="img-team overflow-hidden rounded-3">
+              <img src="assets/img/team/team-3.jpg" alt="" class="w-100 h-100">
+            </div>
+          </div>
+          <div class="col-md-7 offset-md-1">
+            <div class="member-info">
+              <div class="about-tim">
+                <b>
+                  <h4>M. RENALDI MAULANA</h4>
+                </b>
+                <hr>
+                <!-- <h4>DEWAN KOMISARIS</h4> -->
+                <p>Jabatan &emsp; &emsp; &emsp; &emsp; &emsp;:</p>
+                <p>Tempat Tgl Lahir&emsp;&emsp;:</p>
+                <p>Alamat &emsp;&emsp;&emsp;&emsp; &emsp;&emsp; :</p>
+                <p>Pengurus &emsp;&emsp; &emsp;&emsp;&emsp;:</p>
+              </div>
+            </div>
+          </div>
+          <hr>
+
+          <div class="col-md-4 mb-3">
+            <div class="img-team overflow-hidden rounded-3">
+              <img src="assets/img/team/team-4.jpg" alt="" class="w-100 h-100">
+            </div>
+          </div>
+          <div class="col-md-7 offset-md-1">
+            <div class="member-info">
+              <div class="about-tim">
+                <b>
+                  <h4>AI ELVIANI DEWI</h4>
+                </b>
+                <hr>
+                <!-- <h4>DEWAN KOMISARIS</h4> -->
+                <p>Jabatan &emsp; &emsp; &emsp; &emsp; &emsp;:</p>
+                <p>Tempat Tgl Lahir&emsp;&emsp;:</p>
+                <p>Alamat &emsp;&emsp;&emsp;&emsp; &emsp;&emsp; :</p>
+                <p>Pengurus &emsp;&emsp; &emsp;&emsp;&emsp;:</p>
+              </div>
+            </div>
+          </div>
+          <hr>
+
+          <div class="col-md-4 mb-3">
+            <div class="img-team overflow-hidden rounded-3">
+              <img src="assets/img/team/team-1.jpg" alt="" class="w-100 h-100">
+            </div>
+          </div>
+          <div class="col-md-7 offset-md-1">
+            <div class="member-info">
+              <div class="about-tim">
+                <b>
+                  <h4>HERIYANTO SE,MM</h4>
+                </b>
+                <hr>
+                <!-- <h4>DEWAN KOMISARIS</h4> -->
+                <p>Jabatan &emsp; &emsp; &emsp; &emsp; &emsp;:</p>
+                <p>Tempat Tgl Lahir&emsp;&emsp;:</p>
+                <p>Alamat &emsp;&emsp;&emsp;&emsp; &emsp;&emsp; :</p>
+                <p>Pengurus &emsp;&emsp; &emsp;&emsp;&emsp;:</p>
+              </div>
+            </div>
+          </div>
+          <hr>
+
+          <div class="col-md-4 mb-3">
+            <div class="img-team overflow-hidden rounded-3">
+              <img src="assets/img/team/team-2.jpg" alt="" class="w-100 h-100">
+            </div>
+          </div>
+          <div class="col-md-7 offset-md-1">
+            <div class="member-info">
+              <div class="about-tim">
+                <b>
+                  <h4>RAHAJENG ARGANINGGAR</h4>
+                </b>
+                <hr>
+                <!-- <h4>DEWAN KOMISARIS</h4> -->
+                <p>Jabatan &emsp; &emsp; &emsp; &emsp; &emsp;:</p>
+                <p>Tempat Tgl Lahir&emsp;&emsp;:</p>
+                <p>Alamat &emsp;&emsp;&emsp;&emsp; &emsp;&emsp; :</p>
+                <p>Pengurus &emsp;&emsp; &emsp;&emsp;&emsp;:</p>
+              </div>
+            </div>
+          </div>
+          <hr>
+
+
+        </div>
       </div>
-    </section>
+    </div>
 
-  </main><!-- End #main -->
+
+  </main><!-- End Main -->
 
   <!-- ======= Footer ======= -->
   <footer id="footer">
@@ -112,13 +310,13 @@
         <div class="row">
 
           <div class="col-lg-3 col-md-6 footer-contact">
-            <h3>Baker</h3>
+            <h3>BSS Group</h3>
             <p>
-              A108 Adam Street <br>
-              New York, NY 535022<br>
-              United States <br><br>
-              <strong>Phone:</strong> +1 5589 55488 55<br>
-              <strong>Email:</strong> info@example.com<br>
+              JL. Pasar Kemis<br>
+              Kp.Waru RT 04/04<br>
+              Desa Sukaharja <br><br>
+              <strong>Phone:</strong> +6282115105406<br>
+              <strong>Email:</strong> bintangsriwijayaservice@gmail.com<br>
             </p>
           </div>
 
@@ -127,7 +325,7 @@
             <ul>
               <li><i class="bx bx-chevron-right"></i> <a href="#">Home</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="#">About us</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Services</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">Jasa</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="#">Terms of service</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="#">Privacy policy</a></li>
             </ul>
@@ -136,11 +334,12 @@
           <div class="col-lg-3 col-md-6 footer-links">
             <h4>Our Services</h4>
             <ul>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Web Design</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Web Development</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Product Management</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Marketing</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Graphic Design</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">Pelatihan Menjahit</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">Pelatihan Asembling</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">Pelatihan Cutting</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">Operator Asembling</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">Pelatihan QC</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">Staff</a></li>
             </ul>
           </div>
 
@@ -160,14 +359,9 @@
 
       <div class="me-md-auto text-center text-md-start">
         <div class="copyright">
-          &copy; Copyright <strong><span>Baker</span></strong>. All Rights Reserved
+          &copy; Copyright <strong><span>Bss Group</span></strong>. All Rights Reserved
         </div>
-        <div class="credits">
-          <!-- All the links in the footer should remain intact. -->
-          <!-- You can delete the links only if you purchased the pro version. -->
-          <!-- Licensing information: https://bootstrapmade.com/license/ -->
-          <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/baker-free-onepage-bootstrap-theme/ -->
-          Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+        <div class="credits">Designed by <a href="index.html">BSS Founder</a>
         </div>
       </div>
       <div class="social-links text-center text-md-right pt-3 pt-md-0">
@@ -180,7 +374,8 @@
     </div>
   </footer><!-- End Footer -->
 
-  <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
+  <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i
+      class="bi bi-arrow-up-short"></i></a>
 
   <!-- Vendor JS Files -->
   <script src="assets/vendor/purecounter/purecounter.js"></script>
